[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://ColorRect.gd" type="Script" id=2]
[ext_resource path="res://Interaction.gd" type="Script" id=4]
[ext_resource path="res://Sound/flashlight.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/walk.mp3" type="AudioStream" id=6]
[ext_resource path="res://Model/Hand/Senter.material" type="Material" id=7]
[ext_resource path="res://Model/Hand/Cahaya.material" type="Material" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="Animation" id=21]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "head_bob"
length = 0.32
tracks/0/type = "value"
tracks/0/path = NodePath("..:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.184639, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.36, -0.4 ), Vector3( 0, 1.28, -0.4 ), Vector3( 0, 1.36, -0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../walk_audio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.32 ),
"transitions": PoolRealArray( 1e-05, 4.59479, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="ArrayMesh" id=20]
resource_name = "Hand & Lamp_Cylinder001"
surfaces/0 = {
"aabb": AABB( -1.29779, -0.819393, -1.49856, 2.59558, 1.95006, 2.99712 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 190, 195, 81, 191, 255, 255, 127, 191, 130, 176, 176, 63, 0, 0, 0, 56, 0, 0, 0, 0, 190, 195, 81, 191, 255, 255, 127, 191, 0, 130, 126, 193, 0, 58, 20, 56, 0, 0, 0, 0, 190, 195, 81, 191, 255, 255, 127, 191, 126, 176, 129, 86, 0, 60, 0, 56, 0, 0, 0, 0, 122, 210, 255, 62, 1, 0, 128, 191, 130, 176, 176, 63, 0, 0, 0, 0, 0, 0, 0, 0, 122, 210, 255, 62, 1, 0, 128, 191, 204, 149, 127, 63, 0, 0, 0, 0, 0, 0, 0, 0, 122, 210, 255, 62, 1, 0, 128, 191, 52, 149, 127, 63, 0, 60, 0, 0, 0, 0, 0, 0, 122, 210, 255, 62, 1, 0, 128, 191, 126, 176, 129, 86, 0, 60, 0, 0, 216, 179, 93, 63, 190, 195, 81, 191, 254, 255, 255, 190, 0, 130, 126, 193, 169, 59, 10, 57, 216, 179, 93, 63, 190, 195, 81, 191, 254, 255, 255, 190, 126, 176, 129, 86, 170, 58, 0, 56, 216, 179, 93, 63, 190, 195, 81, 191, 254, 255, 255, 190, 127, 0, 127, 1, 170, 58, 0, 56, 216, 179, 93, 63, 122, 210, 255, 62, 2, 0, 0, 191, 52, 149, 127, 63, 170, 58, 0, 0, 216, 179, 93, 63, 122, 210, 255, 62, 2, 0, 0, 191, 43, 173, 127, 63, 170, 58, 0, 0, 216, 179, 93, 63, 122, 210, 255, 62, 2, 0, 0, 191, 126, 176, 129, 86, 170, 58, 0, 0, 216, 179, 93, 63, 122, 210, 255, 62, 2, 0, 0, 191, 127, 0, 127, 1, 170, 58, 0, 0, 215, 179, 93, 63, 190, 195, 81, 191, 2, 0, 0, 63, 0, 130, 127, 193, 169, 59, 245, 58, 215, 179, 93, 63, 190, 195, 81, 191, 2, 0, 0, 63, 46, 0, 127, 86, 85, 57, 0, 56, 215, 179, 93, 63, 190, 195, 81, 191, 2, 0, 0, 63, 127, 0, 127, 1, 85, 57, 0, 56, 215, 179, 93, 63, 122, 210, 255, 62, 253, 255, 255, 62, 19, 182, 127, 193, 85, 57, 0, 0, 215, 179, 93, 63, 122, 210, 255, 62, 253, 255, 255, 62, 43, 173, 127, 63, 85, 57, 0, 0, 215, 179, 93, 63, 122, 210, 255, 62, 253, 255, 255, 62, 46, 0, 127, 86, 85, 57, 0, 0, 215, 179, 93, 63, 122, 210, 255, 62, 253, 255, 255, 62, 127, 0, 127, 1, 85, 57, 0, 0, 46, 189, 187, 179, 190, 195, 81, 191, 0, 0, 128, 63, 210, 0, 80, 63, 255, 55, 0, 56, 46, 189, 187, 179, 190, 195, 81, 191, 0, 0, 128, 63, 0, 130, 127, 193, 0, 58, 235, 59, 46, 189, 187, 179, 190, 195, 81, 191, 0, 0, 128, 63, 46, 0, 127, 40, 255, 55, 0, 56, 46, 189, 187, 179, 122, 210, 255, 62, 254, 255, 127, 63, 210, 0, 80, 63, 255, 55, 0, 0, 46, 189, 187, 179, 122, 210, 255, 62, 254, 255, 127, 63, 237, 182, 127, 193, 255, 55, 0, 0, 46, 189, 187, 179, 122, 210, 255, 62, 254, 255, 127, 63, 19, 182, 127, 193, 255, 55, 0, 0, 46, 189, 187, 179, 122, 210, 255, 62, 254, 255, 127, 63, 46, 0, 127, 86, 255, 55, 0, 0, 216, 179, 93, 191, 190, 195, 81, 191, 254, 255, 255, 62, 129, 0, 0, 63, 85, 53, 0, 56, 216, 179, 93, 191, 190, 195, 81, 191, 254, 255, 255, 62, 210, 0, 80, 63, 85, 53, 0, 56, 216, 179, 93, 191, 190, 195, 81, 191, 254, 255, 255, 62, 0, 130, 126, 193, 86, 56, 245, 58, 216, 179, 93, 191, 122, 210, 255, 62, 248, 255, 255, 62, 129, 0, 0, 63, 85, 53, 0, 0, 216, 179, 93, 191, 122, 210, 255, 62, 248, 255, 255, 62, 210, 0, 80, 63, 85, 53, 0, 0, 216, 179, 93, 191, 122, 210, 255, 62, 248, 255, 255, 62, 213, 173, 127, 63, 85, 53, 0, 0, 216, 179, 93, 191, 122, 210, 255, 62, 248, 255, 255, 62, 237, 182, 127, 193, 85, 53, 0, 0, 216, 179, 93, 191, 190, 195, 81, 191, 252, 255, 255, 190, 129, 0, 0, 63, 85, 49, 0, 56, 216, 179, 93, 191, 190, 195, 81, 191, 252, 255, 255, 190, 130, 176, 176, 63, 85, 49, 0, 56, 216, 179, 93, 191, 190, 195, 81, 191, 252, 255, 255, 190, 0, 130, 127, 193, 86, 56, 10, 57, 216, 179, 93, 191, 122, 210, 255, 62, 1, 0, 0, 191, 129, 0, 0, 63, 85, 49, 0, 0, 216, 179, 93, 191, 122, 210, 255, 62, 1, 0, 0, 191, 130, 176, 176, 63, 85, 49, 0, 0, 216, 179, 93, 191, 122, 210, 255, 62, 1, 0, 0, 191, 213, 173, 127, 63, 85, 49, 0, 0, 216, 179, 93, 191, 122, 210, 255, 62, 1, 0, 0, 191, 204, 149, 127, 63, 85, 49, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 211, 208, 63, 191, 52, 149, 127, 63, 170, 58, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 211, 208, 63, 191, 43, 173, 127, 63, 170, 58, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 211, 208, 63, 191, 127, 80, 127, 63, 170, 58, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 211, 208, 63, 191, 127, 0, 127, 63, 170, 58, 0, 0, 52, 71, 55, 51, 62, 196, 57, 63, 211, 208, 191, 191, 129, 80, 127, 63, 0, 0, 0, 0, 52, 71, 55, 51, 62, 196, 57, 63, 211, 208, 191, 191, 204, 149, 127, 63, 0, 0, 0, 0, 52, 71, 55, 51, 62, 196, 57, 63, 211, 208, 191, 191, 52, 149, 127, 63, 0, 60, 0, 0, 52, 71, 55, 51, 62, 196, 57, 63, 211, 208, 191, 191, 127, 80, 127, 63, 0, 60, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 209, 208, 63, 63, 19, 182, 127, 193, 85, 57, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 209, 208, 63, 63, 43, 173, 127, 63, 85, 57, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 209, 208, 63, 63, 46, 0, 127, 193, 85, 57, 0, 0, 6, 30, 166, 63, 62, 196, 57, 63, 209, 208, 63, 63, 127, 0, 127, 63, 85, 57, 0, 0, 249, 178, 189, 179, 62, 196, 57, 63, 209, 208, 191, 63, 210, 0, 127, 193, 255, 55, 0, 0, 249, 178, 189, 179, 62, 196, 57, 63, 209, 208, 191, 63, 237, 182, 127, 193, 255, 55, 0, 0, 249, 178, 189, 179, 62, 196, 57, 63, 209, 208, 191, 63, 19, 182, 127, 193, 255, 55, 0, 0, 249, 178, 189, 179, 62, 196, 57, 63, 209, 208, 191, 63, 46, 0, 127, 193, 255, 55, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 206, 208, 63, 63, 129, 0, 127, 63, 85, 53, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 206, 208, 63, 63, 210, 0, 127, 193, 85, 53, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 206, 208, 63, 63, 213, 173, 127, 63, 85, 53, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 206, 208, 63, 63, 237, 182, 127, 193, 85, 53, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 210, 208, 63, 191, 129, 0, 127, 63, 85, 49, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 210, 208, 63, 191, 129, 80, 127, 63, 85, 49, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 210, 208, 63, 191, 213, 173, 127, 63, 85, 49, 0, 0, 6, 30, 166, 191, 62, 196, 57, 63, 210, 208, 63, 191, 204, 149, 127, 63, 85, 49, 0, 0, 92, 244, 135, 63, 142, 185, 144, 63, 157, 252, 28, 191, 129, 0, 127, 63, 184, 54, 54, 57, 92, 244, 135, 63, 142, 185, 144, 63, 157, 252, 28, 191, 210, 0, 127, 193, 184, 54, 54, 57, 92, 244, 135, 63, 142, 185, 144, 63, 157, 252, 28, 191, 0, 127, 126, 63, 184, 54, 54, 57, 92, 244, 135, 63, 142, 185, 144, 63, 157, 252, 28, 191, 0, 127, 126, 63, 184, 54, 54, 57, 226, 236, 232, 50, 142, 185, 144, 63, 157, 252, 156, 191, 210, 0, 127, 193, 0, 52, 109, 56, 226, 236, 232, 50, 142, 185, 144, 63, 157, 252, 156, 191, 0, 127, 126, 63, 0, 52, 109, 56, 226, 236, 232, 50, 142, 185, 144, 63, 157, 252, 156, 191, 0, 127, 127, 63, 0, 52, 109, 56, 226, 236, 232, 50, 142, 185, 144, 63, 157, 252, 156, 191, 46, 0, 127, 193, 0, 52, 109, 56, 92, 244, 135, 63, 142, 185, 144, 63, 155, 252, 28, 63, 129, 0, 127, 63, 184, 54, 201, 58, 92, 244, 135, 63, 142, 185, 144, 63, 155, 252, 28, 63, 129, 80, 127, 63, 184, 54, 201, 58, 92, 244, 135, 63, 142, 185, 144, 63, 155, 252, 28, 63, 0, 127, 127, 63, 184, 54, 201, 58, 231, 213, 172, 179, 142, 185, 144, 63, 155, 252, 156, 63, 129, 80, 127, 63, 255, 51, 146, 59, 231, 213, 172, 179, 142, 185, 144, 63, 155, 252, 156, 63, 0, 127, 127, 63, 255, 51, 146, 59, 231, 213, 172, 179, 142, 185, 144, 63, 155, 252, 156, 63, 0, 126, 126, 63, 255, 51, 146, 59, 231, 213, 172, 179, 142, 185, 144, 63, 155, 252, 156, 63, 127, 80, 127, 63, 255, 51, 146, 59, 92, 244, 135, 191, 142, 185, 144, 63, 152, 252, 28, 63, 0, 126, 126, 63, 28, 45, 201, 58, 92, 244, 135, 191, 142, 185, 144, 63, 152, 252, 28, 63, 0, 126, 126, 63, 28, 45, 201, 58, 92, 244, 135, 191, 142, 185, 144, 63, 152, 252, 28, 63, 127, 80, 127, 63, 28, 45, 201, 58, 92, 244, 135, 191, 142, 185, 144, 63, 152, 252, 28, 63, 126, 0, 127, 193, 28, 45, 201, 58, 91, 244, 135, 191, 142, 185, 144, 63, 156, 252, 28, 191, 0, 127, 127, 63, 28, 45, 54, 57, 91, 244, 135, 191, 142, 185, 144, 63, 156, 252, 28, 191, 0, 126, 126, 63, 28, 45, 54, 57, 91, 244, 135, 191, 142, 185, 144, 63, 156, 252, 28, 191, 46, 0, 127, 193, 28, 45, 54, 57, 91, 244, 135, 191, 142, 185, 144, 63, 156, 252, 28, 191, 126, 0, 127, 193, 28, 45, 54, 57, 6, 30, 166, 63, 142, 185, 144, 63, 211, 208, 63, 191, 0, 127, 126, 63, 83, 55, 10, 57, 6, 30, 166, 63, 142, 185, 144, 63, 211, 208, 63, 191, 0, 127, 126, 63, 83, 55, 10, 57, 6, 30, 166, 63, 142, 185, 144, 63, 211, 208, 63, 191, 127, 80, 127, 63, 170, 58, 0, 0, 6, 30, 166, 63, 142, 185, 144, 63, 211, 208, 63, 191, 127, 0, 127, 63, 170, 58, 0, 0, 199, 125, 152, 50, 142, 185, 144, 63, 211, 208, 191, 191, 129, 80, 127, 63, 0, 0, 0, 0, 199, 125, 152, 50, 142, 185, 144, 63, 211, 208, 191, 191, 0, 127, 126, 63, 0, 52, 20, 56, 199, 125, 152, 50, 142, 185, 144, 63, 211, 208, 191, 191, 0, 127, 127, 63, 0, 52, 20, 56, 199, 125, 152, 50, 142, 185, 144, 63, 211, 208, 191, 191, 127, 80, 127, 63, 0, 60, 0, 0, 6, 30, 166, 63, 142, 185, 144, 63, 209, 208, 63, 63, 0, 127, 127, 63, 83, 55, 245, 58, 6, 30, 166, 63, 142, 185, 144, 63, 209, 208, 63, 63, 46, 0, 127, 193, 85, 57, 0, 0, 6, 30, 166, 63, 142, 185, 144, 63, 209, 208, 63, 63, 127, 0, 127, 63, 85, 57, 0, 0, 32, 55, 243, 179, 142, 185, 144, 63, 209, 208, 191, 63, 210, 0, 127, 193, 255, 55, 0, 0, 32, 55, 243, 179, 142, 185, 144, 63, 209, 208, 191, 63, 0, 127, 127, 63, 255, 51, 235, 59, 32, 55, 243, 179, 142, 185, 144, 63, 209, 208, 191, 63, 0, 126, 126, 63, 255, 51, 235, 59, 32, 55, 243, 179, 142, 185, 144, 63, 209, 208, 191, 63, 46, 0, 127, 193, 255, 55, 0, 0, 6, 30, 166, 191, 142, 185, 144, 63, 206, 208, 63, 63, 129, 0, 127, 63, 85, 53, 0, 0, 6, 30, 166, 191, 142, 185, 144, 63, 206, 208, 63, 63, 210, 0, 127, 193, 85, 53, 0, 0, 6, 30, 166, 191, 142, 185, 144, 63, 206, 208, 63, 63, 0, 126, 126, 63, 101, 41, 245, 58, 6, 30, 166, 191, 142, 185, 144, 63, 206, 208, 63, 63, 0, 126, 126, 63, 101, 41, 245, 58, 6, 30, 166, 191, 142, 185, 144, 63, 210, 208, 63, 191, 129, 0, 127, 63, 85, 49, 0, 0, 6, 30, 166, 191, 142, 185, 144, 63, 210, 208, 63, 191, 129, 80, 127, 63, 85, 49, 0, 0, 6, 30, 166, 191, 142, 185, 144, 63, 210, 208, 63, 191, 0, 127, 127, 63, 101, 41, 10, 57, 6, 30, 166, 191, 142, 185, 144, 63, 210, 208, 63, 191, 0, 126, 126, 63, 101, 41, 10, 57, 92, 244, 135, 63, 232, 18, 125, 63, 157, 252, 28, 191, 129, 0, 127, 63, 184, 54, 54, 57, 92, 244, 135, 63, 232, 18, 125, 63, 157, 252, 28, 191, 210, 0, 127, 193, 184, 54, 54, 57, 226, 236, 232, 50, 232, 18, 125, 63, 157, 252, 156, 191, 210, 0, 127, 193, 0, 52, 109, 56, 226, 236, 232, 50, 232, 18, 125, 63, 157, 252, 156, 191, 46, 0, 127, 193, 0, 52, 109, 56, 92, 244, 135, 63, 232, 18, 125, 63, 155, 252, 28, 63, 129, 0, 127, 63, 184, 54, 201, 58, 92, 244, 135, 63, 232, 18, 125, 63, 155, 252, 28, 63, 129, 80, 127, 63, 184, 54, 201, 58, 231, 213, 172, 179, 232, 18, 125, 63, 155, 252, 156, 63, 129, 80, 127, 63, 255, 51, 146, 59, 231, 213, 172, 179, 232, 18, 125, 63, 155, 252, 156, 63, 127, 80, 127, 63, 255, 51, 146, 59, 92, 244, 135, 191, 232, 18, 125, 63, 152, 252, 28, 63, 127, 80, 127, 63, 28, 45, 201, 58, 92, 244, 135, 191, 232, 18, 125, 63, 152, 252, 28, 63, 126, 0, 127, 193, 28, 45, 201, 58, 91, 244, 135, 191, 232, 18, 125, 63, 156, 252, 28, 191, 46, 0, 127, 193, 28, 45, 54, 57, 91, 244, 135, 191, 232, 18, 125, 63, 156, 252, 28, 191, 126, 0, 127, 193, 28, 45, 54, 57 ),
"array_index_data": PoolByteArray( 2, 0, 12, 0, 6, 0, 2, 0, 8, 0, 12, 0, 9, 0, 20, 0, 13, 0, 9, 0, 16, 0, 20, 0, 15, 0, 27, 0, 19, 0, 15, 0, 23, 0, 27, 0, 21, 0, 32, 0, 24, 0, 21, 0, 29, 0, 32, 0, 4, 0, 65, 0, 41, 0, 4, 0, 47, 0, 65, 0, 28, 0, 38, 0, 31, 0, 28, 0, 35, 0, 38, 0, 36, 0, 3, 0, 39, 0, 36, 0, 0, 0, 3, 0, 37, 0, 7, 0, 1, 0, 7, 0, 22, 0, 14, 0, 22, 0, 37, 0, 30, 0, 7, 0, 37, 0, 22, 0, 62, 0, 104, 0, 58, 0, 62, 0, 108, 0, 104, 0, 34, 0, 55, 0, 25, 0, 34, 0, 61, 0, 55, 0, 18, 0, 43, 0, 11, 0, 18, 0, 51, 0, 43, 0, 40, 0, 60, 0, 33, 0, 40, 0, 64, 0, 60, 0, 10, 0, 48, 0, 5, 0, 10, 0, 42, 0, 48, 0, 26, 0, 50, 0, 17, 0, 26, 0, 56, 0, 50, 0, 77, 0, 117, 0, 75, 0, 77, 0, 118, 0, 117, 0, 57, 0, 98, 0, 52, 0, 57, 0, 103, 0, 98, 0, 44, 0, 96, 0, 49, 0, 44, 0, 91, 0, 96, 0, 46, 0, 109, 0, 63, 0, 46, 0, 93, 0, 109, 0, 59, 0, 100, 0, 54, 0, 59, 0, 105, 0, 100, 0, 53, 0, 92, 0, 45, 0, 53, 0, 99, 0, 92, 0, 71, 0, 89, 0, 68, 0, 71, 0, 94, 0, 89, 0, 69, 0, 97, 0, 76, 0, 69, 0, 90, 0, 97, 0, 76, 0, 101, 0, 78, 0, 76, 0, 97, 0, 101, 0, 79, 0, 106, 0, 81, 0, 79, 0, 102, 0, 106, 0, 82, 0, 111, 0, 86, 0, 82, 0, 107, 0, 111, 0, 85, 0, 95, 0, 72, 0, 85, 0, 110, 0, 95, 0, 67, 0, 114, 0, 70, 0, 67, 0, 113, 0, 114, 0, 73, 0, 122, 0, 87, 0, 73, 0, 115, 0, 122, 0, 83, 0, 119, 0, 80, 0, 83, 0, 120, 0, 119, 0, 74, 0, 112, 0, 66, 0, 74, 0, 116, 0, 112, 0, 88, 0, 121, 0, 84, 0, 88, 0, 123, 0, 121, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 192,
"material": ExtResource( 7 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 124
}
surfaces/1 = {
"aabb": AABB( -1.06214, 0.98857, -1.22646, 2.1243, 1.00136e-05, 2.45292 ),
"array_data": PoolByteArray( 92, 244, 135, 63, 232, 18, 125, 63, 157, 252, 28, 191, 0, 127, 126, 63, 184, 54, 54, 57, 226, 236, 232, 50, 232, 18, 125, 63, 157, 252, 156, 191, 0, 127, 126, 63, 0, 52, 109, 56, 92, 244, 135, 63, 232, 18, 125, 63, 155, 252, 28, 63, 0, 127, 126, 63, 184, 54, 201, 58, 231, 213, 172, 179, 232, 18, 125, 63, 155, 252, 156, 63, 0, 127, 126, 63, 255, 51, 146, 59, 92, 244, 135, 191, 232, 18, 125, 63, 152, 252, 28, 63, 0, 127, 127, 63, 28, 45, 201, 58, 91, 244, 135, 191, 232, 18, 125, 63, 156, 252, 28, 191, 0, 127, 127, 63, 28, 45, 54, 57 ),
"array_index_data": PoolByteArray( 2, 0, 1, 0, 0, 0, 1, 0, 4, 0, 5, 0, 4, 0, 2, 0, 3, 0, 1, 0, 2, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 12,
"material": ExtResource( 9 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="Animation" id=9]
resource_name = "zoom"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ 70.0, 30.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "zoom_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ 30.0, 70.0 ]
}

[sub_resource type="BoxShape" id=5]

[sub_resource type="CapsuleShape" id=4]
height = 5.0

[sub_resource type="CapsuleMesh" id=17]
mid_height = 5.0

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Head" type="CollisionShape" parent="."]
transform = Transform( 1, -3.75351e-10, 3.97904e-13, 3.75351e-10, 0.999998, -0.00214675, 4.12115e-13, 0.00214675, 0.999998, 0, 1.36, -0.4 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 5.55112e-17, 1.42109e-14, 0, 1, -2.32831e-10, -2.84217e-14, 2.32831e-10, 1, 7.43849e-15, 0.184, 0.4 )
cull_mask = 1048573
doppler_tracking = 2
fov = 80.0
near = 0.01
far = 190.0

[node name="Handloc" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 1.38778e-16, 0, 2.498e-16, 1, 4.65661e-10, 0, -4.65661e-10, 1, 0.718482, -0.952222, -1.10742 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera"]
playback_process_mode = 0
playback_speed = 0.55
anims/RESET = SubResource( 21 )
anims/head_bob = SubResource( 2 )

[node name="Hand" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 1.38778e-16, -2.84217e-14, 5.82867e-16, 0.999999, 6.98492e-10, 0, -6.98492e-10, 0.999999, 0.718482, -0.952222, -1.10742 )

[node name="ViewportContainer" type="ViewportContainer" parent="Head/Camera/Hand"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="Head/Camera/Hand/ViewportContainer"]
size = Vector2( 395, 295 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCam" type="Camera" parent="Head/Camera/Hand/ViewportContainer/Viewport"]
transform = Transform( 1, -4.71845e-16, 1.74846e-07, 3.75351e-10, 0.999998, -0.00214675, -1.74846e-07, 0.00214675, 0.999998, 1.42109e-14, 1.50314, 0.000394195 )
cull_mask = 2
doppler_tracking = 2
fov = 80.0
near = 0.01
far = 190.0

[node name="Flashlight" type="SpotLight" parent="Head/Camera/Hand"]
transform = Transform( 1, -4.13558e-15, -1.7053e-13, 3.38618e-15, 1, 1.39698e-09, 1.84741e-13, -1.39698e-09, 1, -0.723749, 0.929469, 0.548545 )
visible = false
spot_range = 29.0
spot_angle = 54.0

[node name="FlashLightSound" type="AudioStreamPlayer3D" parent="Head/Camera/Hand/Flashlight"]
stream = ExtResource( 5 )
unit_db = 60.0
max_db = -2.0
pitch_scale = 4.0

[node name="Senter" type="MeshInstance" parent="Head/Camera/Hand"]
transform = Transform( 0.0472983, 2.8388e-07, -1.04642e-10, 1.66357e-09, -9.31323e-09, 0.0472983, 5.11073e-08, -0.30262, -2.91038e-10, -0.182482, 0.404865, 0.298861 )
layers = 2
mesh = SubResource( 20 )

[node name="zoom_camera" type="AnimationPlayer" parent="Head/Camera"]
anims/zoom = SubResource( 9 )
anims/zoom_out = SubResource( 10 )

[node name="InteractionRayCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, -8.32668e-17, -1.93871e-26, 8.32668e-17, 1, 2.32831e-10, -1.54074e-33, -2.32831e-10, 1, 8.74228e-08, -0.00107336, -0.499999 )
enabled = true
cast_to = Vector3( 0, 0, -2.8 )
collision_mask = 2
collide_with_areas = true
script = ExtResource( 4 )

[node name="CetekanSound" type="AudioStreamPlayer3D" parent="Head/Camera/InteractionRayCast"]
stream = ExtResource( 5 )
max_db = -4.0
pitch_scale = 3.0

[node name="Area" type="Area" parent="Head/Camera/InteractionRayCast"]
transform = Transform( 1, 3.75351e-10, 2.72848e-12, -3.75351e-10, 0.999998, 0.0150294, 4.12115e-13, -0.00214675, 7.00098, 5.88866e-08, -0.00679111, -1.70038 )

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/InteractionRayCast/Area"]
transform = Transform( 0.19, -9.15011e-18, -5.68434e-14, 1.76225e-18, 0.195, 2.51055e-10, 8.88178e-16, 3.32564e-13, 0.215683, -8.74229e-08, 0, 0.0285672 )
shape = SubResource( 5 )

[node name="walk_audio" type="AudioStreamPlayer3D" parent="Head"]
transform = Transform( 1, 5.55112e-17, 7.10543e-14, 0, 1, -2.32831e-10, -8.52651e-14, 2.32831e-10, 1, -6.32021e-08, 0.189388, 0.361473 )
stream = ExtResource( 6 )
unit_db = 45.0
max_db = -10.0
pitch_scale = 2.0
emission_angle_enabled = true
emission_angle_degrees = 43.0

[node name="run__audio" type="AudioStreamPlayer3D" parent="Head"]
transform = Transform( 1, -1.38778e-16, 2.84217e-14, -2.77556e-17, 1, -2.32831e-10, -2.84217e-14, 2.32831e-10, 1, 1.2601e-14, 0.184, 0.4 )
stream = ExtResource( 6 )
unit_db = 45.0
max_db = -23.0
pitch_scale = 3.2

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 70.0
margin_bottom = 36.0
color = Color( 0, 0, 0, 0.843137 )
script = ExtResource( 2 )

[node name="fpx_counter" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="Badan" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, -0.687, -0.4 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Badan"]
visible = false
mesh = SubResource( 17 )

[connection signal="body_entered" from="Head/Camera/InteractionRayCast/Area" to="Head/Camera/InteractionRayCast" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Head/Camera/InteractionRayCast/Area" to="Head/Camera/InteractionRayCast" method="_on_Area_body_exited"]
